src/css/style.css
/* ... */
.slogan .btn {
  margin: 3rem 0;
}

.background-viana-hello-btn,
.btn .btn-button,
.btn .btn-discover {
  color: var(--white);
  background-color: var(--v-gold-90);
  border-radius: 25rem;
  padding: 1rem 2.5rem;
  font-size: 1.8rem;
}

.background-viana-hello-btn {
  font-size: 1.5rem;
  padding: 1rem 10rem;
  font-weight: bold;

}

.background-viana-hello-btn:hover,
.btn .btn-discover:hover {
  background-color: var(--v-red-90);
}

.section-1,
.section-2 {
  padding: 3rem 0;
}

.even,
.section-1 {
  background-color: var(--custom-gray);
}

.card {
  padding: 2rem;
  border-radius: 1.5rem;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-content: flex-start;
  align-items: flex-start;
  gap: 2rem;
}

.card.last {
  height: 25rem;
}

.card .image-card {
  display: block;
  width: 60rem;
  height: 100%;
  object-fit: cover;
  border-radius: 1.5rem;
  /*width: 100%;*/
  max-width: 100%;
  clip-path: polygon(5% 0%, 95% 0%, 100% 5%, 100% 85%, 95% 90%, 85% 90%, 85% 100%, 70% 90%, 5% 90%, 0% 85%, 0% 5%);
  transition: clip-path 1s linear;
}

.card .image-card:hover {
  clip-path: polygon(5% 0%, 90% 0%, 95% 5%, 95% 20%, 100% 20%, 95% 30%, 95% 95%, 90% 100%,5% 100%, 0% 95%,0% 5%);
}

.card .content {
  display: flex;
  flex-direction: column;
  align-self: stretch;
  place-items: center;
  justify-content: space-between;
}

.card {
  align-items: center;
}

.card h2 {
  font-size: 4rem;
  /*
    margin-bottom: 2rem;
    */
}

.card p {
  font-size: 1.6rem;
}

.btn.btn-button {
  background-color: var(--v-red-90);
}

.btn .btn-button:hover {
  background-color: var(--v-red-90);
}

.category {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: center;
  align-content: center;
  justify-content: space-around;
}

.content-section {
  gap: 2rem;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: space-evenly;
  align-items: stretch;
  padding: 3rem 0;
  align-items: center;
  max-width: 100%;
  width: 100%;
}

.content-section h2 {
  width: auto;
  font-size: 2rem;
}

.content-box {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 3rem;
  justify-content: center;
  justify-items: center;
}

.card-category {
  overflow: hidden; /* Evita que la imagen se salga del contenedor */
  border-radius: 10px;
  border: 2px solid var(--v-gold);
  background-color: var(--custom-white);
  max-width: 30rem;
}

.card-category .img-card {
  width: 100%;
  height: auto;
  object-fit: cover;
  aspect-ratio: 600/400;
  max-width: 30rem;
}

.card-category a {
  color: var(--v-gold);
}

.card-category figcaption {
  width: 95%;
  margin: auto;
  padding: 1rem 0;
}

table .images img:hover,
.content-box-detail article.nav-web:hover,
.card-category:hover {
  border: 1px solid var(--v-red);
  box-shadow: var(--box-sadow);
}

.card-category:hover a {
  color: var(--v-red);
}

.zoom-in {
  vertical-align: middle;
  transition: transform 0.3s ease-in-out;
  display: inline-block;
  transform: perspective(1px) translateZ(0);
  transform: scale(1);
}

.zoom-in.animation-bounce-top {
  animation-iteration-count: 1;
}

.zoom-in:hover {
  transform: scale(1.1);
}

/*
.card-category:hover .img-card {
    transform: var(--zoom-in);
    transition: transform 0.3s ease-in-out;
}*/

.content-box-detail {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-content: stretch;
  align-items: center;
  justify-content: space-evenly;
  gap: 4rem;
}

.content-box-detail article {
  max-width: 100%;
  width: 90%;
}

/*:not(:first-child)*/
.content-box-detail article {
  max-width: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-content: stretch;
  align-items: center;
  justify-content: space-evenly;
  gap: 3rem;
}

table .images img,
.content-box-detail .img-card,
.content-box-detail .img-card {
  border-radius: 10px;
  overflow: hidden;
}
.article-detail-two-picture .img-picture,
.article-detail-two-picture .info,
.article-detail-two .img-card,
.article-detail-two .info {
  max-width: 60rem;
  width: 46%;
  height: auto;
}

.article-detail-two-picture .img-card {
  width: 100%;
  height: auto;
}

.content-box-detail .article-detail-tree {
  justify-content: center;
  gap: 2rem;
}

.article-detail-tree .img-card,
.article-detail-tree .info {
  max-width: 100%;
  width: 31%;
  height: auto;
}

.info.p-two {
  display: grid;
  gap: 1rem;
}

.info.list {
  text-align: left;
}

.info.list ul {
  margin-top: 1rem;
  margin-left: 2.5rem;
  border-radius: 5px;
  font-size: 1.5rem;
}

.info.list li::marker {
  color: var(--v-gold);
}

.info.list li {
  list-style: disc outside;
  padding-left: 0.5rem;
}

.content-box-detail .img-card:hover {
  box-shadow: var(--box-sadow);
}

.presentation {
  gap: 0;
  padding: 2rem 0;
  display: block;
}

.presentation .info {
  font-size: 1.8rem;
}

.presentation .info h3 {
  font-size: 3rem;
}

.presentation .content-box-detail article {
  justify-content: center;
  gap: 4rem;
}

.presentation .content-box-detail.img-vertical {
  width: 100%;
}

.presentation .img-card.img-vertical {
  max-width: 30rem;
  width: 100%;
}

.info.paragraph {
  display: grid;
  gap: 3rem;
  width: 46%;
}

.presentation .video {
  border-radius: 10px;
  border: 0;
  aspect-ratio: 16/9;
}

.content-box-detail article.nav-web {
  width: 80%;
  text-align: justify-all;
  background-color: var(--white);
  border: 1px solid var(--v-gold);
  border-radius: 10px;
  padding: 3rem;
}

table {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
  text-align: center;
  margin-bottom: 3rem;
  border: 1px solid var(--v-gold);
  font-size: 1.6rem;
}

td,
th {
  border: 1px solid var(--v-gold);
  padding: 0.5rem 0 0.5rem 0.5rem;
}

thead th:nth-child(1) {
  width: 25%;
}

thead th:nth-child(2) {
  width: 22%;
}

thead th:nth-child(3) {
  width: 20%;
}

thead th:nth-child(4) {
  width: 18%;
}

thead th:nth-child(5) {
  width: 14%;
}
/* ... */

